apps/base/nextcloud/istio-virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nextcloud
spec:
  hosts: []
  gateways: []
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: nextcloud
        headers:
          response:
            set:
              Strict-Transport-Security: max-age=31536000; includeSubDomains
  - match:
    - uri:
        prefix: /.well-known/carddav
    route:
    - destination:
        port:
          number: 8080
        host: nextcloud
        headers:
          response:
            set:
              Strict-Transport-Security: max-age=31536000; includeSubDomains
    rewrite:
      uri: /remote.php/dav
  - match:
    - uri:
        prefix: /.well-known/caldav
    route:
    - destination:
        port:
          number: 8080
        host: nextcloud
        headers:
          response:
            set:
              Strict-Transport-Security: max-age=31536000; includeSubDomains
    rewrite:
      uri: /remote.php/dav
